syntax = "proto3";

package proto;

option go_package = "github.com/SeregaParkurchik/gym_app/proto/pkg/proto_v1;proto_v1";
//какой пакет будет у сгенерированнхы файлов
// https://github.com/SeregaParkurchik/gym_app/proto - здесь мы находимся
// pkg/proto_v1 - куда будем генерировать; proto_v1 - короткое имя пакета

service AdministratorV1{
    rpc CreateMembership(CreateRequest) returns (CreateResponse);
}

message Administrator {
    int64 id = 1;
    string name  = 2;
    string role  = 3;
}

message CreateRequest{
    Administrator administrator = 1;
}

message CreateResponse{
    Administrator administrator = 1;
}